--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a homemaker.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Earth?!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Traveling, Reading, and Cooking.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I am not a dreamer ;)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In the present.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To earn more to travel more.</p>
     </section>
 
     <footer id="footer">
