--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/smaji08" target = "_blank">Github</a></li>
         </ul>
     </footer>
 </body>
