--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Traveling, Reading, and Cooking.</p>
       <h1>What's your dream job?</h1>
-      <p>I am not a dreamer ;)</p>
+      <p>A freelance web developer</p>
       <h1>Where do you live?</h1>
       <p>In the present.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>To earn more to travel more.</p>
+        <li>
+            <ul>To be a freelancer </ul>
+            <ul>To earn more to travel more</ul>
+        </li>
+        
+      
     </section>
 
     <footer id="footer">
